# haytracer

./: .gitignore  README.md  haytracer.cabal  hserve.cabal
demo/: Main.hs
scripts/: quickTest.sh
src/: Camera.hs  Color.hs  Render.hs  Scene.hs  Shapes.hs  Sphere.hs  Vector.hs
test/: Main.hs
