name:                haytracer
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  build-depends:     base
                   , time
                   , containers
                   , bytestring
                   , random
  exposed-modules:   Vector, Render, Scene, Shapes, Camera, Color

executable demo
  hs-source-dirs:    demo
  main-is:           Main.hs
  build-depends:     base
                   , haytracer
                   , containers
                   , random

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , haytracer
                   , HUnit
                   , containers
                   , random
